Correcting header spacing

--- a/LB.PhotoGalleries/wwwroot/css/site.css
+++ b/LB.PhotoGalleries/wwwroot/css/site.css
@@ -116,7 +116,7 @@ h5 {
     color: white;
     text-transform: uppercase;
     display: inline-block;
-    padding: 2px 5px 0;
+    padding: 2px 5px 1px 5px;
     font-family: sans-serif;
     border-radius: 3px;
     font-size: 1em;
